[package]
name = "log-server"
version = "0.1.0"
authors = ["Daniel <dghaehre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
chrono = "0.4.13"
colored = "2"
log = "0.4.13"
jsonxf = "1.0"
serde_json = "1.0"
simplelog = "^0.7.6"
